packages/domain-picker/src/domain-picker/style.scss
@import '~@automattic/calypso-color-schemes';
@import '~@automattic/onboarding/styles/mixins';
@import '~@automattic/typography/styles/fonts';

$accent-blue: #117ac9;

.domain-picker__empty-state {
	display: flex;
	justify-content: center;
	flex-direction: column;

	&--text {
		max-width: 320px;
		font-size: $font-body-small;
		margin: 10px 0;
		color: $dark-gray-500;
	}

	@include break-mobile {
		flex-direction: row;
		align-items: center;

		&--text {
			margin: 15px 10px;
		}
	}
}

.domain-picker__show-more {
	margin-top: 20px;
	text-align: center;
}

.domain-picker__search {
	position: relative;
	margin-bottom: 20px;

	input[type='text'].components-text-control__input {
		padding: 6px 40px 6px 16px;
		height: 38px;
		background: $gray-100;
		border: none;

		&::placeholder {
			color: var( --studio-black );
		}

		&:focus {
			box-shadow: 0 0 0 2px var( --studio-blue-30 );
			background: var( --studio-white );
		}
	}

	svg {
		position: absolute;
		top: 6px;
		right: 8px;
	}
}

.domain-picker__suggestion-item-group {
	flex-grow: 1;
}

.domain-picker__suggestion-sections {
	flex: 1;
}

.domain-picker__suggestion-group-label {
	margin: 0;
	margin-top: 1.5em;
	margin-bottom: 0.5em;
	text-transform: uppercase;
	color: var( --studio-gray-40 );
	font-size: $font-body-extra-small;
	letter-spacing: 1px;
	font-weight: bold;
}

.domain-picker__suggestion-item {
	@include onboarding-medium-text;
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	min-height: 36px + ( 10px * 2 ) + ( 1px * 2 ); // button height + padding height + border height
	background: var( --studio-white );
	border: 1px solid var( --studio-gray-5 );
	padding: 10px 14px;
	position: relative;
	text-align: left;
	cursor: pointer;

	&.type-individual-item {
		min-height: 64px;
		border-width: 2px;
		&.is-selected {
			border-color: $accent-blue;
		}

		&:hover {
			border-color: $accent-blue;
		}
	}

	&.placeholder {
		cursor: default;
	}

	&.type-individual-item,
	&:first-of-type {
		border-top-left-radius: 5px; /* stylelint-disable-line scales/radii */
		border-top-right-radius: 5px; /* stylelint-disable-line scales/radii */
	}

	&.type-individual-item,
	&:last-of-type {
		border-bottom-left-radius: 5px; /* stylelint-disable-line scales/radii */
		border-bottom-right-radius: 5px; /* stylelint-disable-line scales/radii */
	}

	+ .domain-picker__suggestion-item {
		margin-top: -1px;
	}

	+ .domain-picker__suggestion-item.type-individual-item {
		margin: 12px 0;
	}

	&.is-unavailable {
		color: var( --studio-gray-40 );
	}

	// animate the added domains after you click expand
	@for $i from 7 through 14 {
		&:nth-child( #{$i} ) {
			transform: translateY( 20px );
			opacity: 0;
			animation: domain-picker-item-slide-up 0.1s ease-in forwards;
			animation-delay: #{( $i - 7 ) * 40ms};
		}
	}

	@keyframes domain-picker-item-slide-up {
		100% {
			transform: translateY( 0 );
			opacity: 1;
		}
	}

	$radio-button-size: 16px;

	input[type='radio'].domain-picker__suggestion-radio-button {
		@include radio-control; // explicitly include Gutenberg's radio-control style mixin, see https://github.com/WordPress/gutenberg/pull/22596

		width: $radio-button-size;
		height: $radio-button-size;
		min-width: $radio-button-size; // prevents long domain from squishing the radio button
		padding: 0;
		margin: 1px 12px 0 0;
		vertical-align: middle;
		position: relative;

		&:checked {
			border-color: var( --studio-blue-30 );
			background-color: var( --studio-blue-30 );

			// wp-admin's forms.css uses ::before on radio button
			&::before {
				display: none;
			}

			&::after {
				content: '';
				width: $radio-button-size - 2 * $border-width;
				height: $radio-button-size - 2 * $border-width;
				border: 2px solid white;
				border-radius: 50%;
				position: absolute;
				margin: 0;
				background: transparent;
			}

			&:focus {
				border-color: var( --studio-blue-30 );
				box-shadow: 0 0 0 1px var( --studio-blue-30 );
			}
		}

		&:not( :disabled ):focus,
		&:not( :disabled ):hover {
			border-color: var( --studio-blue-30 );
			box-shadow: 0 0 0 1px var( --studio-blue-30 );
		}

		&:disabled {
			border-color: var( --studio-gray-40 );
		}
	}

	.components-spinner {
		margin: 1px 10px 0 0;
	}

	&.locked .domain-picker__suggestion-item-name,
	&.locked .domain-picker__price {
		color: var( --studio-gray-50 );
		svg {
			vertical-align: bottom;
			fill: currentColor;
		}
	}
}

.domain-picker__suggestion-item-name {
	flex-grow: 2;
	flex-basis: 2px;
	letter-spacing: 0.4px;
	// smaller gap between domain name and price on mobile
	margin-right: 10px;

	@include break-medium {
		margin-right: 24px;
	}

	.domain-picker__suggestion-item-name-inner {
		// vertically align elements within, needed for items showing information icon.
		display: flex;
		align-items: center;
		flex-wrap: wrap;
	}

	.domain-picker__domain-name {
		word-break: break-word; // use hyphens if any to break domain name
	}

	&.placeholder {
		@include onboarding-placeholder();
		max-width: 30%;
		margin-right: auto; // position the placeholder to the left overriding justify-content: space-between
	}
}

.domain-picker__suggestion-item.type-individual-item.is-selected {
	.domain-picker__suggestion-item-name {
		color: $accent-blue;
	}
}

.domain-picker__domain-tld {
	color: var( --studio-blue-40 );

	&.with-margin {
		// margin for recommended badge. this margin shouldn't
		// be placed on the badge because if the badge falls
		// on a newline, it will have whitespace on the left.
		// margin isnt applied if hstsRequired is truthy as InfoTooltip component
		// provides equal spacing between this and the recommended badge.
		margin-right: 10px;
	}

	.domain-picker__suggestion-item.is-unavailable & {
		color: var( --studio-gray-40 );
	}
}

.domain-picker__suggestion-item.type-individual-item {
	.domain-picker__domain-tld {
		// stylelint-disable-next-line scales/font-weight
		font-weight: 500;
		color: unset;
	}
}

.domain-picker__info-tooltip {
	margin-right: 10px;
	cursor: pointer;
	z-index: 1;
}

.domain-picker__badge {
	display: inline-flex;
	border-radius: 2px;
	padding: 0 10px;
	line-height: 20px;
	height: 20px;
	align-items: center;
	// stylelint-disable-next-line scales/font-size
	font-size: 10px; // typography-exception smaller size needed
	text-transform: uppercase;
	vertical-align: middle;
	background-color: var( --studio-blue-50 );
	color: var( --color-text-inverted );
	margin: 2px 0; // harmless in desktop, useful in mobile (when the badge is below the text)
}

.domain-picker__suggestion-item.type-individual-item {
	.domain-picker__badge {
		color: var( --studio-green-80 );
		background-color: var( --studio-green-5 );
		// stylelint-disable-next-line scales/radii
		border-radius: 4px;
		text-transform: unset;
		// stylelint-disable-next-line scales/font-size
		font-size: 12px; // typography-exception smaller size needed
	}

	&.is-selected {
		.domain-picker__badge {
			color: $accent-blue;
			background-color: #d9e8f7;
		}
	}
}

.domain-picker__price {
	color: var( --studio-gray-40 );
	text-align: right;
	flex-basis: 0;
	flex-grow: 1;
	transition: opacity 200ms ease-in-out;
	// Don't show free text on mobile view
	&:not( .is-paid ) {
		display: none;
	}

	// When select button is visible
	&:not( :last-child ) {
		text-align: left;
	}

	@include break-small {
		flex-basis: 1px;

		&:not( .is-paid ) {
			display: inline;
		}
	}

	&.placeholder {
		@include onboarding-placeholder();
		min-width: 64px;
	}
}

.domain-picker__suggestion-item.type-individual-item {
	.domain-picker__price {
		display: flex;
		flex-direction: column-reverse;

		// show the "Default" label for free domains on mobile
		// applies only when domain-item is in individual-item mode
		&:not( .is-paid ) {
			display: block;
		}

		@include break-medium {
			display: block;
		}
	}
}

.domain-picker__price-inclusive {
	color: var( --studio-green-40 );
	display: none;

	@include break-small {
		display: inline;
	}
}

.domain-picker__suggestion-item.type-individual-item {
	.domain-picker__price-inclusive {
		display: block;
		line-height: 20px;

		strong {
			// stylelint-disable-next-line scales/font-weight
			font-weight: 500;
		}
	}
	&.is-selected {
		.domain-picker__price-inclusive {
			color: $accent-blue;
		}
	}
}

.domain-picker__price-cost {
	text-decoration: line-through;
}

.domain-picker__suggestion-item.type-individual-item.is-selected {
	.domain-picker__price-cost {
		color: $accent-blue;
		opacity: 0.68;
	}
}

.domain-picker__body {
	display: flex;

	// When in mobile, domain categories appear above
	// the list of domain suggestions.
	@media ( max-width: $break-mobile ) {
		display: block;

		.domain-picker__aside {
			width: 100%;
			padding: 0;
		}
	}
}

.domain-picker__aside {
	width: 220px;
	padding-right: 30px;
}

.domain-picker__change-subdomain-tip {
	font-size: $font-body-extra-small;
	color: var( --studio-gray-40 );
}

.domain-picker__error {
	margin-top: 24px;

	#{&}-message {
		@include onboarding-medium-text;
	}

	#{&}-retry-btn {
		margin-top: 16px;
	}
}

.domain-picker__suggestion-select-button.components-button.is-secondary {
	min-width: 140px;
	justify-content: center;

	&:not( :hover ):not( .is-selected ) {
		box-shadow: inset 0 0 0 1px var( --studio-gray-10 );
		color: var( --mainColor );
	}

	&.is-selected {
		box-shadow: inset 0 0 0 1px var( --wp-admin-theme-color-darker-10 );
		color: var( --wp-admin-theme-color-darker-10 );
	}
}

